testcases/error/testsematics.c
int   a, b, c;
float m, n;
int   b[10][10];
int   d[10][10];

struct node
{
    int a;
    int b;
};

int fibo(int a)
{
    struct node tt;

    test1(c);
    if (a == 1 || a == 2)
        return 1;
    return fibo(a - 1) + fibo(a - 2);

    if (a > 10)
        return fibo(a - 1, a - 2);
    if (b > 100)
        return fibo(a - 1) + fibo(a - 2);
    else {
        b--;
    }

    fibo(tt);

    c = a[8];
    m = 0.8;
    n = 0.9;
    c = d[m][n];
    c.a;
    a = tt.c;
    tt++;
    break;
    return 0;
}
void testf()
{
    return 'a';
}

int testff()
{
    int i;
    i++;
}

int main(int argc)
{
    int m   = 10, n, i;
    test1   = 0;
    i       = 1;
    n       = m();
    (n + 1) = m;
    --(n + 1);
    a = m;
    continue;
    while (i <= m) {
        n = fibo(i);
        i = i + 1;
        if (i > 10) {
            break;
        }
        else
            continue;
    }
    n = fibo;
    return 1;
}
